// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Header component correctly with items in cart 1`] = `
<header
  className="header"
>
  <div
    className="content-container"
  >
    <div
      className="header__content"
    >
      <Link
        className="header__title"
        replace={false}
        to="/"
      >
        <h1>
          XBKS
        </h1>
      </Link>
      <Link
        className="button button--link"
        replace={false}
        to="/cart"
      >
        Cart 
        <span
          className="header__cart-info--items"
        >
          <br />
          2
           items
        </span>
      </Link>
    </div>
  </div>
</header>
`;

exports[`Should render Header component correctly with no any items in cart 1`] = `
<header
  className="header"
>
  <div
    className="content-container"
  >
    <div
      className="header__content"
    >
      <Link
        className="header__title"
        replace={false}
        to="/"
      >
        <h1>
          XBKS
        </h1>
      </Link>
      <Link
        className="button button--link"
        replace={false}
        to="/cart"
      >
        Cart 
      </Link>
    </div>
  </div>
</header>
`;
